@@ -1,3 +1,7 @@
+2003-09-18  Roger Sayle  <roger@eyesopen.com>
+
+	* jcf-write.c (generate_bytecode_insns): Add support for fconst_2.
+
 2003-09-16  Andrew Haley  <aph@redhat.com>
 
 	* jcf-write.c (generate_bytecode_insns): Add MIN_EXPR and MAX_EXPR.
